[admin] update license files and website

--- a/site/assets/styles/reset.css
+++ b/site/assets/styles/reset.css
@@ -14,3 +14,4 @@ li { float: left; padding: 10px; text-align: center; }
 pre { font-size: 90%; padding: 20px 0 10px 0; -moz-border-radius: 10px; font-family: courier, monospace; }
 code { font-family: courier, monospace; }
 
+img { border: none; }
