--- a/site/assets/styles/site.css
+++ b/site/assets/styles/site.css
@@ -1,23 +1,23 @@
 
-p { color: #222; font-weight: bold; }
-a { color: #222; }
+p { color: #222; font-weight: normal; }
+a { color: #262; }
 a:hover { text-decoration: underline; }
 
 h1 { font-size: 100px; margin: 20px 0; color: #f7d901; }
 h2 { margin-top: 30px; }
 
- pre { background: white; -moz-border-radius: 10px; color: #559900; font-weight: bold; }
-code { color: green; }
+ pre { background: white; -moz-border-radius: 10px; color: #229900; font-weight: bold; }
+code { color: #229900; }
 
-#nav { padding: 20px 50px 20px 0; text-align: center; background: #f7d901; color: pink; }
+#nav { padding: 20px 50px 20px 0; text-align: center; background: url(../images/skin.jpg) #f7e931; color: pink; }
 #nav a { font-size: 90%; }
 
 #header { height: 250px; text-align: left; border-top: 2px solid yellow; border-bottom: 2px solid yellow; }
 #header h1 { font-size: 100px; padding: 40px 0 0 0; color: #f7d901; margin-left: -10px; }
 
-#main { background: #f7d901; color: white; border-bottom: 2px solid yellow; padding: 10px 0 30px 0; }
-#main h2 { color: #225500; }
-#main h3 { color: brown; }
+#main { background: url(../images/skin.jpg) #f7e931; color: white; border-bottom: 2px solid yellow; padding: 10px 0 30px 0; }
+#main h2 { color: #333333; }
+#main h3 { color: #333333; }
 #main a { font-size: 95%; text-decoration: underline; }
 
 #footer { padding: 20px; text-align: center; margin: 0 auto; width: 800px; }
