--- a/assets/styles/site.css
+++ b/assets/styles/site.css
@@ -19,7 +19,7 @@ a:hover { text-decoration: underline; }
 h1 { font-size: 90px; margin: 20px 0; color: #f7d901; }
 h2 { margin-top: 30px; }
 
- pre { background: #dedede; -moz-border-radius: 10px; color: #262; font-weight: bold; }
+ pre { background: #ffffff; -moz-border-radius: 10px; }
 code { color: #262; font-weight: bold; }
   tt { color: #262; font-weight: bold; }
 
