--- a/site/assets/styles/class.css
+++ b/site/assets/styles/class.css
@@ -1,3 +1,4 @@
 .page { width: 800px; margin: 0 auto; }
 
-.copyright p { text-align: center; margin: 0 auto; }
+.copyright { width: 500px; float: left; padding: 0; text-align: left; }
+.copyright p { text-align: right; }
